Fix some spacing

--- a/app/assets/stylesheets/front/3_content_blocks/form-block.sass
+++ b/app/assets/stylesheets/front/3_content_blocks/form-block.sass
@@ -73,6 +73,12 @@
   line-height: 1.7647
   margin-top: 6px
   margin-bottom: 12px
+  padding: 0 $gutter-width
+
+  @include mobile
+    margin-left: auto
+    margin-right: auto
+    max-width: 300px
 
   @include laptop-or-larger
     line-height: 1
@@ -86,7 +92,7 @@
   padding: 0 $gutter-width
 
   @include mobile
-    max-width: 340px
+    max-width: 300px
     margin-left: auto
     margin-right: auto
 
