--- a/app/assets/stylesheets/front/4_special_content/streams.sass
+++ b/app/assets/stylesheets/front/4_special_content/streams.sass
@@ -82,6 +82,7 @@
     font-size: 3rem
     line-height: 1.6667
     letter-spacing: 0.8px
+    margin-top: 0
     margin-bottom: 6vh
 
     @include tablet-or-larger
